--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -2,6 +2,9 @@
   <div class='row'>
     <div class='col-md-5 '>
       <h2>ジャンル一覧・追加</h2>
+      <div class="text-success">
+        <%= flash[:notice] %>
+      </div>
       <%= form_with model: @genre,url: admin_genres_path,method: :post do |f| %>
       <table class="table table-sm table-borderless">
         <tr>
