--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -4,6 +4,9 @@
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <div class="my-4">
         <h4 class="col-3 bg-light text-center">商品編集</h4>
+        <div class="text-danger">
+          <%= render"layouts/errors", obj: @item %>
+        </div>
       </div>
       <div class="mx-5 my-3">
         <%= render"form", genres: @genres, item: @item, url: admin_item_path, submit: "変更を保存" %>
