--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -2,6 +2,9 @@
   <div class="row">
     <div class="mx-auto col-10">
       <h4 class="my-4 mx-5 bg-light text-center col-2">商品詳細</h4>
+        <div class="text-success">
+          <%= flash[:notice] %>
+        </div>
     </div>
   </div>
   <div class="row">
