--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -5,6 +5,9 @@
       <div class="text-success">
         <%= flash[:notice] %>
       </div>
+      <div class="text-danger">
+        <%= render"layouts/errors", obj: @genre %>
+      </div>
       <%= form_with model: @genre,url: admin_genres_path,method: :post do |f| %>
       <table class="table table-sm table-borderless">
         <tr>
