--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,8 @@
-<header class="d-flex justify-content-between bg-light border-bottom">
+<header class="d-flex justify-content-between bg-light border-bottom align-items-center">
   <div class="logo_area">
-    <div class="logo px-5 py-3 m-2 h3 border border-success">
+    <div class="logo p-0 m-2 h3 border border-success">
       <%= link_to root_path do %>
-        <%# ↓の代わりににlogoが入る予定 %>
-        <div>ＬＯＧＯ</div>
+        <div id="logo"></div>
       <% end %>
     </div>
   </div>
