--- a/app/views/public/homes/_sidebar.html.erb
+++ b/app/views/public/homes/_sidebar.html.erb
@@ -1,16 +1,22 @@
-<div class="sidebar col-3 bg-warning p-5">
+<div class="sidebar col-3 p-5">
   <%# フラッシュメッセージ見えないように表示しています ※トップ画面に表示しないと他のviewにログイン関係のメッセージが表示されてしまうため%>
   <p class="opacity-0"><%= flash[:notice] %></p>
-  <table class="text-center mx-auto border border-dark">
-    <thead class="border border-dark">
+  <table class="text-center mx-auto table table-hover">
+    <thead>
      <tr>
         <th>ジャンル検索</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="border">
       <% Genre.all.each do |genre| %>
         <tr>
-          <td><%= link_to genre.name, genre_path(genre.id) %></td>
+          <td>
+            <%= link_to genre_path(genre.id), class: "text-black text-decoration-none" do %>
+              <div>
+                <%= genre.name %>
+              </div>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     </tbody>
