--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,7 +1,10 @@
 <% content_for :title, "商品一覧" %>
 <%= render "public/homes/sidebar" %>
 <div class="p-3 col-9">
-  <h2>商品一覧</h2>
-  <%= render "public/items/index", items: @items %>
-  <%= paginate @items %>
+  <div class="d-flex align-items-end">
+    <h2>商品一覧</h2>
+    <h6>（全 <%= @items.length %> 件）</h6>
+  </div>
+  <%= render "public/items/index", items: @items.page(params[:page]) %>
+  <%= paginate @items.page(params[:page]) %>
 </div>
