--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
     </div>
     <div class="search_area m-2">
       <%= form_with url: search_path, class: "input-group ms-auto", method: :get do |f| %>
-        <%= f.text_field :search, class: "form-control rounded-start", placeholder: "検索" %>
+        <%= f.text_field :search, class: "form-control rounded-start", placeholder: "検索", value: @query %>
         <div class="input-group-append">
           <%= f.button :type => "submit", name: nil, class: " btn btn-outline-secondary rounded-0 rounded-end " do %>
             <i class="fa-solid fa-magnifying-glass"></i>
