--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -7,43 +7,47 @@
         <%= flash[:notice] %>
       </div>
       <div class = "col-4">
-        <table class="table table-borderless text-nowrap">
+        <table class="table table-borderless align-middle text-nowrap">
           <tr>
-            <td><h3>登録情報</h3></td>
+            <td><h3 class="m-0">登録情報</h3></td>
             <td><%= link_to '編集する', customers_information_edit_path, class:"btn btn-success btn-block" %></td>
           </tr>
         </table>
       </div>
       <table class="table table-bordered">
+          <colgroup>
+            <col class="bg-light">
+            <col>
+          </colgroup>
         <tr>
-          <td class="align-middle bg-light">氏名</td>
+          <th>氏名</th>
           <td><%= @customer.last_name %>
           <%= @customer.first_name %></td>
         </tr>
         <tr>
-          <td class="align-middle bg-light">カナ</td>
+          <th>カナ</th>
           <td><%= @customer.last_name_kana %>
           <%= @customer.first_name_kana %></td>
         </tr>
         <tr>
-          <td class="align-middle bg-light">郵便番号</td>
+          <th>郵便番号</th>
           <td><%= @customer.postal_code %></td>
         </tr>
         <tr>
-          <td class="align-middle bg-light">住所</td>
+          <th>住所</th>
           <td><%= @customer.address %></td>
         </tr>
         <tr>
-          <td class="align-middle bg-light">電話番号</td>
+          <th>電話番号</th>
           <td><%= @customer.telephone_number %></td>
         </tr>
         <tr>
-          <td class="align-middle bg-light">メールアドレス</td>
+          <th>メールアドレス</th>
           <td><%= @customer.email %></td>
         </tr>
       </table>
       <div class = "col-4">
-        <table class="table table-borderless">
+        <table class="table table-borderless align-middle">
           <tr>
             <td>配送先</td>
             <td><%= link_to '一覧をみる', addresses_path , class:"btn btn-primary btn-block" %></td>
