--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -40,23 +40,21 @@
             </tr>
           <% end %>
         </table>
-        <div class="row">
-          <div class="col-8">
+        <div class="d-flex align-items-center justify-content-between">
+          <div>
             <%= link_to '買い物を続ける',root_path, class: "btn btn-primary" %>
           </div>
-          <div class="col-4">
-            <table class="table table-bordered ">
+          <div>
+            <table class="table table-bordered m-0">
               <tr>
-                <td>合計金額</td>
+                <th class="text-center">合計金額</td>
                 <td class="total_payment text-end"><%= price(@subtotal) %></td>
               </tr>
             </table>
           </div>
-          <div class='row'>
-            <div class="col-3 mx-auto pb-3">
-              <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
-            </div>
-          </div>
+        </div>
+        <div class="text-center my-2">
+          <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
         </div>
       </div>
     <% else %>
