footer 文字、背景色変更しました

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-header border-top p-1">
-      <p class="my-3 mx-auto w-auto text-center">footer</p>
+    <footer class="bg-header border-top p-1 bg-light">
+      <p class="my-3 mx-auto w-auto text-center">- Nagano cake -</p>
     </footer>
   </body>
 </html>
