--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,11 +63,12 @@
 
 .item_box, .card{
   border-radius: 6px;
+  transition: all 0.35s;
 }
+
 
 .item_box .card:hover{
   opacity: 0.9;
-  transition: 0.25s;
 }
 
 .item_box{
