--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -44,7 +44,7 @@
       <%= f.submit "編集内容を保存",class: 'btn btn-success' %>
     </div>
     <div class='col-1'>
-      <%= link_to '退会する',customers_disable_confirm_path, class: 'btn btn-danger' %>
+      <%= link_to '退会する',customers_disable_confirm_path, class: 'btn btn-danger text-nowrap' %>
     </div>
   </div>
   <% end %>
