--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -9,14 +9,16 @@
 			<span class="h4"><%= price_taxin(@item.price) %></span>
 			<span>（税込）</span>
 		</p>
-		<% if customer_signed_in? %>
+		<% if customer_signed_in? && @item.is_active %>
 			<%= form_with model: @cart_item, url: cart_items_path, class: "add_to_cart mt-5 d-flex" do |f| %>
 				<%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: "form-select w-50 me-3" %>
 				<%= f.hidden_field :item_id, value: @item.id %>
 				<%= f.submit "カートに入れる", class: "btn btn-success" %>
 			<% end %>
 		<% else %>
-			<p class="m-5 p-2 border border-warning text-center">購入するにはログインしてください。</p>
+			<p class="m-5 p-2 border border-warning text-center">
+				<%= @item.is_active ? "購入するにはログインしてください。" : "販売停止中" %>
+			</p>
 		<% end %>
 	</div>
 </div>
