--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,7 +1,9 @@
 <% content_for :title, "検索結果" %>
 <%= render "public/homes/sidebar" %>
 <div class="p-3 col-9">
-  <h2>検索結果一覧</h2>
-  <%= render "public/items/index", items: @items %>
-  <%= paginate @items %>
+  <div class="d-flex align-items-end">
+    <h2>検索結果一覧</h2>
+    <h6>（全 <%= @items.length %> 件）</h6>
+  </div>  <%= render "public/items/index", items: @items.page(params[:page]) %>
+  <%= paginate @items.page(params[:page]) %>
 </div>
