売切商品の一覧画面でのカーソル挙動変更、カートに追加できない機能のバグを回避

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -86,9 +86,8 @@
 
 .item_box:not(.discontinued):hover, .item_box.discontinued{
   background-color: black;
+  cursor: default;
 }
-
-
 
 .item_box_space{
   height: 0;
