商品一覧画面で、商品名が長いときに改行される問題を修正

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -112,6 +112,12 @@
   object-fit: cover;
 }
 
+.item_box .card-body p{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .pagination{
   justify-content: center;
   margin-top: 20px;
