--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -9,10 +9,10 @@
         <%= render"layouts/errors", obj: @genre %>
       </div>
       <%= form_with model: @genre,url: admin_genres_path,method: :post do |f| %>
-      <table class="table table-sm table-borderless">
+      <table class="table table-sm table-borderless align-middle">
         <tr>
           <td>ジャンル名</td>
-          <td><%= f.text_field :name %></td>
+          <td><%= f.text_field :name, class: "form-control" %></td>
           <td><%= f.submit "新規登録",class: 'btn btn-success' %></td>
         </tr>
       </table>
@@ -21,7 +21,7 @@
   </div>
   <div class='row'>
     <div class='col-md-4'>
-      <table class="table table-hover table-inverse ">
+      <table class="table table-hover table-inverse align-middle">
         <thead class="table-light">
           <tr>
             <th>ジャンル名</th>
@@ -31,7 +31,7 @@
         <% @genres.each do |genre| %>
           <tr>
             <td><%= genre.name %></td>
-            <td><%= link_to '編集する', edit_admin_genre_path(genre.id),class: 'btn btn-success' %></td>
+            <td class="text-end"><%= link_to '編集する', edit_admin_genre_path(genre.id),class: 'btn btn-success' %></td>
           </tr>
           <% end %>
         </table>
