--- a/app/views/public/items/_index.html.erb
+++ b/app/views/public/items/_index.html.erb
@@ -1,7 +1,7 @@
 <div class="item_list d-flex mx-auto justify-content-center">
   <% items.each do |item| %>
     <div class=" item_box<%= " discontinued" unless item.is_active %>">
-      <a class="text-decoration-none text-dark"<%= " href=#{item_path(item.id)}" if item.is_active %>>
+      <a class="text-decoration-none text-dark" title="<%= item.name %>&#13;&#10;<%= price_taxin(item.price) %>"<%= " href=#{item_path(item.id)}" if item.is_active %>>
         <div class="card">
           <%= image_tag item.get_item_image, height: "200" %>
           <div class="card-body">
