商品編集時に、ジャンルが未選択になる問題を修正

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -15,7 +15,7 @@
   <tr class="form-group align-middle">
     <th><%= f.label :genre_id, "ジャンル" %></th>
     <%#= f.select :genre_id, genres.map{ |genre| [genre.name, genre.id]}, {include_blank: '--選択してください--'}, {class: 'form-select'} %>
-    <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), {include_blank: '--選択してください--'}, {class: 'form-select'} %></td>
+    <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name, selected: @genre_selector), {include_blank: '--選択してください--'}, {class: 'form-select'} %></td>
   </tr>
   <tr class="form-group align-middle">
     <th><%= f.label :price, "税抜価格" %></th>
