商品編集時のステータスラジオボタン ラベルをクリックしても反応するよう修正

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -27,11 +27,11 @@
     <td>
       <div class="w-25 d-inline-block">
         <%= f.radio_button :is_active, :true %>
-        <%= f.label :is_active, "販売中" %>
+        <%= f.label :is_active, "販売中", value: :true %>
       </div>
       <div class="d-inline-block">
         <%= f.radio_button :is_active, :false %>
-        <%= f.label :is_active, "販売停止中" %>
+        <%= f.label :is_active, "販売停止中", value: :false %>
       </div>
     </td>
   </tr>
